--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,18 @@
     <string name="budget_setup_link">Manage Budget</string>
     <string name="save_profile">Save Profile</string>
 
+    <!-- Settings Screen -->
+    <string name="settings_title">Settings</string>
+    <string name="notifications_label">Notifications</string>
+    <string name="budget_alerts_setting">Budget Alerts</string>
+    <string name="goal_reminders_setting">Goal Reminders</string>
+    <string name="general_settings_label">General</string>
+    <string name="currency_setting">Currency (USD)</string> 
+    <string name="data_management_label">Data Management</string>
+    <string name="export_data_setting">Export Data</string>
+    <string name="import_data_setting">Import Data</string>
+    <string name="logout_button">Logout</string>
+
     <!-- Add other strings as needed -->
 
 </resources>
