--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,7 +137,13 @@
     <string name="sync_frequency_label">Sync Frequency</string>
     <string name="account_label">Account</string>
     <string name="sign_out_label">Sign Out</string>
+    <string name="back_button_desc">Back</string>
 
     <!-- Add other strings as needed -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="back">Back</string>
+    <string name="settings">Settings</string>
 
 </resources>
