--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,17 @@
     <string name="share_rewards">Share your rewards</string>
     <string name="user_profile_image_desc">Profile picture of user</string>
     <string name="next_reward_label">Next Reward</string>
+    <string name="edit_budget_button_desc">Edit your overall budget</string>
+    <string name="edit_category_budgets_button_desc">Edit category-specific budgets</string>
+    <string name="reports_and_insights_title">Reports &amp; Insights</string>
+    <string name="more_options">More Options</string>
+    <string name="previous_month">Previous Month</string>
+    <string name="next_month">Next Month</string>
+    <string name="total_spending">Total Spending</string>
+    <string name="spending_by_category">Spending by Category</string>
+    <string name="daily_spending_trends">Daily Spending Trends</string>
+
+
 
     <!-- Profile Screen -->
     <string name="profile_title">Profile</string>
