Refactor UI elements across multiple fragments by renaming listener methods to `setupClickListeners`, adding back button functionality, and improving layout consistency. Update navigation actions to include a new Expense History fragment and enhance settings with a sync frequency dialog. Adjust themes and string resources for better localization and user experience.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,5 +154,9 @@
     <string name="prompt_email">Email</string>
     <string name="back">Back</string>
     <string name="settings">Settings</string>
+    <string name="back_button_desc">Back</string>
+    <string name="rewards_and_achievements_title">Rewards &amp; Achievements</string>
+    <string name="alex_johnson">Alex Johnson</string> 
+    <string name="alex_johnson_example_com">alex.johnson@example.com</string>
 
 </resources>
