Enhance expense management features by adding camera permission and FileProvider declaration in the manifest. Update ExpenseHistoryAdapter to handle receipt viewing, and implement relevant category fetching in BudgetRepository and NewExpenseViewModel. Refactor UI elements across fragments for improved navigation and user experience, including new receipt handling in NewExpenseFragment and updates to ReportsViewModel for category display modes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,7 +166,13 @@
 
     <!-- Navigation descriptions -->
     <string name="navigate_to_budget_setup">Navigate to budget setup</string>
+    <string name="navigate_to_profile">Navigate to profile</string>
 
     <!-- Error Messages -->
+
+    <!-- Receipt Feature Strings -->
+    <string name="view_receipt_desc">View attached receipt</string>
+    <string name="receipt_image_desc">Image of the attached receipt</string>
+    <string name="close_dialog_desc">Close receipt view</string>
 
 </resources>
