Refactor ReportsViewModel to enforce a default weekly reporting period, removing the selected period state. Update ReportsFragment to eliminate unnecessary lint suppression. Enhance SettingsFragment to observe UI state changes and display user information. Update layout for user info in fragment_settings.xml and add a new string resource for weekly period.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="edit_category_budgets_button_desc">Edit category-specific budgets</string>
     <string name="reports_and_insights_title">Reports &amp; Insights</string>
     <string name="more_options">More Options</string>
+    <string name="period_weekly">Weekly</string>
     <string name="previous_month">Previous Month</string>
     <string name="next_month">Next Month</string>
     <string name="total_spending">Total Spending</string>
