--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,6 +105,7 @@
 
     <!-- Settings Screen -->
     <string name="profile_picture">Profile Picture</string>
+    <string name="edit_profile_picture">Edit Profile Picture</string>
     <string name="back_button">Back</string>
     <string name="settings_title">Settings</string>
     <string name="notifications_label">Notifications</string>
