Refactor currency handling across the application by integrating CurrencyConverter for consistent currency formatting. Update ExpenseAdapter, HomeFragment, and ExpensesFragment to utilize the new converter for displaying amounts. Enhance SettingsViewModel to manage user-selected currency preferences and update UI accordingly. Modify UserPreferencesManager to store and retrieve selected currency. Clean up legacy currency formatting methods for improved maintainability.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,7 +109,7 @@
     <string name="budget_alerts_setting">Budget Alerts</string>
     <string name="goal_reminders_setting">Goal Reminders</string>
     <string name="general_settings_label">General</string>
-    <string name="currency_setting">Currency (USD)</string> 
+    <string name="currency_setting">Currency</string>
     <string name="data_management_label">Data Management</string>
     <string name="export_data_setting">Export Data</string>
     <string name="import_data_setting">Import Data</string>
